# Delfos

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  decisions.md  design.md  foundations.html  foundations.md  paper.md  plan.md  pyproject.toml
.devin/skills/llvm-cpp-toolchain/: SKILL.md
.github/workflows/: ci.yml  release.yml
delfos/: __init__.py  _delfos.pyi  _logging.py  config.py  workspace.py
delfos/cli/: __init__.py  __main__.py  app.py  render.py
delfos/enrich/: __init__.py  service.py
delfos/indexer/: __init__.py  embedder.py  extractor.py  parser.py  pipeline.py  ts_parser.py
delfos/mcp/: __init__.py  __main__.py  config.py  server.py  views.py
delfos/reconstruct/: __init__.py  planner.py  service.py  summaries.py
delfos/reconstruct/planners/: __init__.py  fake.py  openai.py
delfos/schema/: __init__.py  edges.py  nodes.py
delfos/scip/: generate.py  reader.py  scip_pb2.py  scip_pb2.pyi  service.py  test.py
delfos/store/: __init__.py  base.py  duckdb_store.py  native_store.py
docs/: cli-plan.md  decisions.md  libdelfos-implementation-decisions.md  libdelfos-plan.md  plan.md  scip-integration-plan.md
docs/superpowers/plans/: 2026-06-22-duckdb-graphstore-issues.md  2026-06-22-duckdb-graphstore.md  2026-06-23-reconstruction-engine.md  2026-06-24-mcp-read-server.md  2026-06-25-cli.md  2026-06-25-typescript-indexing.md  2026-06-28-scip-symbol-as-content-id.md  2026-07-05-agent-driven-enrichment.md
docs/superpowers/specs/: 2026-06-22-duckdb-graphstore-design.md  2026-06-23-reconstruction-engine-design.md  2026-06-24-mcp-read-server-design.md  2026-06-25-typescript-indexing-design.md  2026-07-05-agent-driven-enrichment-design.md
libdelfos/bench/: CMakeLists.txt  bench_vector.cpp
libdelfos/bindings/: CMakeLists.txt  py_delfos.cpp
libdelfos/flatbuffers/: delfos.fbs  delfos_generated.h
libdelfos/include/delfos/: delfos.hpp  edge.hpp  graph.hpp  node.hpp  snapshot.hpp  types.hpp  vector_index.hpp
libdelfos/tests/: CMakeLists.txt  test_graph.cpp  test_snapshot.cpp  test_vector_index.cpp
scripts/: smoke_local_llm.py
src/delfos/: __init__.py
src/delfos/schema/: __init__.py  edges.py  enums.py
src/delfos/store/: __init__.py  base.py  duckdb_store.py
tests/: test_config.py  test_e2e.py  test_embedder.py  test_logging.py  test_workspace.py
tests/cli/: conftest.py  test_commands.py  test_doctor.py  test_dotenv.py  test_parser.py  test_render.py
tests/enrich/: conftest.py  test_integration.py  test_service.py
tests/indexer/: test_ir_changes.py  test_parser.py  test_pipeline_scip.py  test_pipeline_ts.py  test_ts_parser.py
tests/mcp/: conftest.py  test_config.py  test_server.py  test_views.py
tests/reconstruct/: conftest.py  test_exports.py  test_fetch.py  test_openai_planner.py  test_planner.py  test_reconstruct.py  test_search.py  test_summaries.py  test_traverse.py
tests/scip/: builders.py  test_generate.py  test_reader.py  test_service.py
tests/store/: test_duckdb_store.py  test_native_store.py
