[project]
name = "delfos"
version = "0.1.0"
description = "Graph memory MCP server for codebases (MRAgent-style reconstruction)"
readme = "README.md"
authors = [
    { name = "Milton Montiel", email = "miltgonmont@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "openai>=1.0.0",
    "pydantic>=2.9.0",
]

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DDELFOS_BUILD_BINDINGS=ON",
    "-DDELFOS_BUILD_TESTS=OFF",
    "-DDELFOS_BUILD_BENCH=OFF",
    "-DCMAKE_CXX_COMPILER=clang++",
]
wheel.packages = ["delfos"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["."]
exclude = [".venv", "build"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
