[project]
name = "delfos"
version = "0.1.0"
description = "Graph memory MCP server for codebases (MRAgent-style reconstruction)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Milton Montiel", email = "miltgonmont@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "mcp>=1.28.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.24.0",
    "protobuf>=7.35.1",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/MiltMont/Delfos"
Repository = "https://github.com/MiltMont/Delfos"
Issues = "https://github.com/MiltMont/Delfos/issues"

[project.scripts]
delfos = "delfos.cli.app:main"
delfos-mcp = "delfos.mcp.__main__:main"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DDELFOS_BUILD_BINDINGS=ON",
    "-DDELFOS_BUILD_TESTS=OFF",
    "-DDELFOS_BUILD_BENCH=OFF",
    # USearch pins cmake_minimum_required < 3.5, which CMake 4.x rejects.
    # Allow it to configure under modern CMake.
    "-DCMAKE_POLICY_VERSION_MINIMUM=3.5",
]
wheel.packages = ["delfos"]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Vendored, machine-generated protobuf bindings for the SCIP schema.
extend-exclude = ["delfos/scip/scip_pb2.py", "delfos/scip/scip_pb2.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["."]
exclude = [".venv", "build", "delfos/scip/scip_pb2.py", "delfos/scip/scip_pb2.pyi"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
